# MiniC-Interpreter-Type-Checker-in-OCaml

./: .gitignore  GlobalTEnv.ml  LocalTEnv.ml  Mem.ml  README.md  Value.ml  addrManager.ml  dune  fstore.ml  hw14_interp.ml  hw14_tc.ml  interp.ml  tc.ml  test.ml
parser/: ast.ml  lexer.mll  parser.mly
